tests/spec/emit/snapshots/panic_as_value_expression.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  fn panicky() -> int {
    panic("oh no!")
  }
---
package main

func panicky() int {
	panic("oh no!")
}
