tests/spec/emit/snapshots/param_struct_pattern_on_go_interface_asserts_type.snap
---
source: tests/spec/emit/patterns.rs
description: |
  
  import "go:example.com/shapes"
  
  fn area(shapes.Rect { W: w, H: h }: shapes.Shape) -> int {
    w * h
  }
---
package main

import "example.com/shapes"

func area(arg shapes.Shape) int {
	asserted := arg.(shapes.Rect)
	w := asserted.W
	h := asserted.H
	return w * h
}
