tests/spec/emit/snapshots/parameter_shadows_go_builtin.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn test(len: int) -> int {
    len + 1
  }
---
package main

func test(len_ int) int {
	return len_ + 1
}
