tests/spec/emit/snapshots/parenthesized_builtin_imaginary_call.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn test(c: complex128) -> float64 {
    (imaginary)(c)
  }
---
package main

func test(c complex128) float64 {
	return imag(c)
}
