tests/spec/emit/snapshots/parenthesized_call_base_field_assignment.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  struct S { x: int }
  
  fn get(r: mut Ref<S>) -> mut Ref<S> { r }
  
  fn main() {
    let mut s = S { x: 0 }
    (get(&s)).x = 1
    let _ = s
  }
---
package main

type S struct {
	x int
}

func get(r *S) *S {
	return r
}

func main() {
	s := S{x: 0}
	ref := get(&s)
	ref.x = 1
	_ = s
}
