tests/spec/emit/snapshots/parenthesized_defer_statement.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn noop() {}
  
  fn main() {
    (defer noop())
  }
---
package main

func noop() {}

func main() {
	defer noop()
}
