tests/spec/emit/snapshots/parenthesized_expression.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn test() -> int {
    (1 + 2) * 3
  }
---
package main

func test() int {
	return (1 + 2) * 3
}
