tests/spec/emit/snapshots/parenthesized_generic_callee_call.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn id<T>(x: T) -> T { x }
  
  fn test() -> int {
    (id)(1)
  }
---
package main

func id[T any](x T) T {
	return x
}

func test() int {
	return id(1)
}
