tests/spec/emit/snapshots/parenthesized_local_generic_return_only_type_args.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  fn make<T>() -> Slice<T> {
    Slice.new<T>()
  }
  
  fn test() -> Slice<int> {
    (make)()
  }
---
package main

func make_[T any]() []T {
	return []T{}
}

func test() []int {
	return make_[int]()
}
