tests/spec/emit/snapshots/parenthesized_native_instance_method_call.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn test() -> int {
    let xs = [1, 2, 3]
    (xs.length)()
  }
---
package main

func test() int {
	xs := []int{1, 2, 3}
	return len(xs)
}
