tests/spec/emit/snapshots/parenthesized_static_generic_return_only_type_args.snap
---
source: tests/spec/emit/functions.rs
description: "input: \npub struct Factory {}\n\nimpl Factory {\n  pub fn make<T>() -> Slice<T> {\n    Slice.new<T>()\n  }\n}\n\nfn test() -> Slice<int> {\n  (Factory.make)()\n}\n"
---
package main

type Factory struct{}

func Factory_Make[T any]() []T {
	return []T{}
}

func test() []int {
	return Factory_Make[int]()
}
